@@ -1,4 +1,4 @@
-$Id: History,v 1.41 2002-05-14 01:40:09 asaim Exp $
+$Id: History,v 1.42 2002-05-15 06:51:30 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 15, 2002, M.Asai (intercoms-V04-00-03)
+- Limit number of stored command string. (improvements)
 
 May 14, 2002, M.Asai (intercoms-V04-00-02)
 - Limit number of stored command string.
